opam-version: "2.0"
maintainer: [ "Reynir Björnsson <reynir@reynir.dk>" ]
authors: [ "Reynir Björnsson <reynir@reynir.dk>" ]
homepage: "https://github.com/reynir/mirage-block-partition"
bug-reports: "https://github.com/reynir/mirage-block-partition/issues"
dev-repo: "git+https://github.com/reynir/mirage-block-partition.git"
license: "ISC"
synopsis: "Mirage block device partitioning"
description: """
Mirage-block-partition lets you view a mirage block device as smaller partitions.
"""

build: [
  [ "dune" "subst" ] { dev }
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] { with-test }
]
depends: [
  "dune" {>= "3.4"}
  "ocaml" {>= "4.08.0"}
  "mirage-block" {>= "3.0.0"}
  "lwt" {>= "5.6.0"}
  "mbr-format" {>= "1.0.0"}

  "mirage-block-combinators" { with-test }
  "alcotest" { with-test & >= "1.0.0" }
  "alcotest-lwt" { with-test & >= "1.0.0" }
]
conflicts: [
  "result" {< "1.5"}
]
x-maintenance-intent: [ "(latest)" ]
